Display publishing dropdown as text only in item form view

--- a/administrator/language/en-GB/plg_workflow_publishing.ini
+++ b/administrator/language/en-GB/plg_workflow_publishing.ini
@@ -10,3 +10,4 @@ PLG_WORKFLOW_PUBLISHING_TRANSITION_OPTIONS_PUBLISHING_LABEL="Publishing state"
 PLG_WORKFLOW_PUBLISHING_TRANSITION_OPTIONS_PUBLISHING_DESC="Define the state an item should be set, when executing this transition"
 PLG_WORKFLOW_PUBLISHING_TRANSITION_OPTIONS_PUBLISHING_DO_NO_CHANGE="- Do not change"
 PLG_WORKFLOW_PUBLISHING_CHANGE_STATE_NOT_ALLOWED="You're not allowed to change the publishing state of this item. Please use a workflow transition."
+PLG_WORKFLOW_PUBLISHING_PUBLISHED="Status: %s"
