Workflow rename transition options to actions (#79)
* Add codeowners

* Rename transition tab options to actions

--- a/administrator/language/en-GB/com_workflow.ini
+++ b/administrator/language/en-GB/com_workflow.ini
@@ -98,6 +98,7 @@ COM_WORKFLOW_TOO_MANY_STAGES="Only one stage can be set as the default."
 COM_WORKFLOW_TOO_MANY_WORKFLOWS="Only one workflow can be set as the default."
 COM_WORKFLOW_TO_STAGE="Target Stage"
 COM_WORKFLOW_TRANSITION="Transition"
+COM_WORKFLOW_TRANSITION_ACTIONS_LABEL="Transition Actions"
 COM_WORKFLOW_TRANSITIONS="Transitions"
 COM_WORKFLOW_TRANSITIONS_LIST="Transitions List: %s"
 COM_WORKFLOW_TRANSITIONS_N_ITEMS_CHECKED_IN="%s transitions checked in."
