Improve add module tooltip (#28912)

--- a/administrator/language/en-GB/mod_quickicon.ini
+++ b/administrator/language/en-GB/mod_quickicon.ini
@@ -24,7 +24,7 @@ MOD_QUICKICON_MEDIA_MANAGER="Media"
 MOD_QUICKICON_MENUITEMS_MANAGER="Menu Items"
 MOD_QUICKICON_MENUITEMS_MANAGER_ADD="Add Menu Item"
 MOD_QUICKICON_MODULE_MANAGER="Modules"
-MOD_QUICKICON_MODULE_MANAGER_ADD="Add Module"
+MOD_QUICKICON_MODULE_MANAGER_ADD="Add Site Module"
 MOD_QUICKICON_NAV_LABEL="Quick Links"
 MOD_QUICKICON_PLUGIN_MANAGER="Plugins"
 MOD_QUICKICON_SHOW_ARTICLES_LABEL="Articles Icon"
