--- a/administrator/language/en-GB/com_menus.ini
+++ b/administrator/language/en-GB/com_menus.ini
@@ -112,6 +112,7 @@ COM_MENUS_ITEMS_REBUILD_FAILED="Failed rebuilding Menu Items list."
 COM_MENUS_ITEMS_REBUILD_SUCCESS="Menu items list rebuilt."
 COM_MENUS_ITEMS_SEARCH_FILTER="Search in title, alias and notes. Prefix with ID: to search for a menu item ID."
 COM_MENUS_ITEMS_SEARCH_FILTER_LABEL="Search Menu Items"
+COM_MENUS_ITEMS_SET_HOME_0="No menu item set to home."
 COM_MENUS_ITEMS_SET_HOME_1="Menu item set to home."
 COM_MENUS_ITEMS_SET_HOME_MORE="%d menu items set to home."
 COM_MENUS_ITEMS_TABLE_CAPTION="Table of Menu Items"
