[4.0] Filtered Item Information [a11y] continued (#29011)
[4.0] Filtered Item Information work continued from #28997

--- a/administrator/language/en-GB/com_finder.ini
+++ b/administrator/language/en-GB/com_finder.ini
@@ -154,6 +154,9 @@ COM_FINDER_MAPS="Maps"
 COM_FINDER_MAPS_CONFIRM_DELETE_PROMPT="Are you sure you want to delete the selected map(s)?"
 COM_FINDER_MAPS_COUNT_PUBLISHED_ITEMS="Published Indexed Content"
 COM_FINDER_MAPS_COUNT_UNPUBLISHED_ITEMS="Unpublished Indexed Content"
+COM_FINDER_MAPS_HEADING_BRANCH="Map Group"
+COM_FINDER_MAPS_HEADING_CONTENT_MAP="Content Map"
+COM_FINDER_MAPS_HEADING_TYPE="Content Type"
 COM_FINDER_MAPS_MULTILANG="Note: Language filter system plugin has been enabled, so this branch will not be used."
 COM_FINDER_MAPS_N_ITEMS_DELETED="%d maps deleted."
 COM_FINDER_MAPS_N_ITEMS_DELETED_1="Map deleted."
