--- a/administrator/language/en-GB/com_users.ini
+++ b/administrator/language/en-GB/com_users.ini
@@ -235,6 +235,12 @@ COM_USERS_NOTES_N_ITEMS_UNPUBLISHED_1="User Note unpublished."
 COM_USERS_NOTES_TABLE_CAPTION="Table of User Notes"
 COM_USERS_OPTION_FILTER_DATE="- Select Registration Date -"
 COM_USERS_OPTION_FILTER_LAST_VISIT_DATE="- Select Last Visit Date -"
+COM_USERS_OPTION_LABEL_COMPONENT="Component"
+COM_USERS_OPTION_LABEL_LEVEL_END="-End Level"
+COM_USERS_OPTION_LABEL_LEVEL_START="Start Level"
+COM_USERS_OPTION_LEVEL_CATEGORY="%d (top category)"
+COM_USERS_OPTION_LEVEL_COMPONENT="%d (component)"
+COM_USERS_OPTION_LEVEL_DEEPER="%d (deeper)"
 COM_USERS_OPTION_RANGE_NEVER="never"
 COM_USERS_OPTION_RANGE_PAST_1MONTH="in the last month"
 COM_USERS_OPTION_RANGE_PAST_3MONTH="in the last 3 months"
@@ -243,9 +249,6 @@ COM_USERS_OPTION_RANGE_PAST_WEEK="in the last week"
 COM_USERS_OPTION_RANGE_PAST_YEAR="in the last year"
 COM_USERS_OPTION_RANGE_POST_YEAR="more than a year ago"
 COM_USERS_OPTION_RANGE_TODAY="today"
-COM_USERS_OPTION_LEVEL_CATEGORY="%d (top category)"
-COM_USERS_OPTION_LEVEL_COMPONENT="%d (component)"
-COM_USERS_OPTION_LEVEL_DEEPER="%d (deeper)"
 COM_USERS_OPTION_SELECT_COMPONENT="- Select Component -"
 COM_USERS_OPTION_SELECT_LEVEL_END="- Select End Level -"
 COM_USERS_OPTION_SELECT_LEVEL_START="- Select Start Level -"
