--- a/administrator/language/en-GB/com_tags.ini
+++ b/administrator/language/en-GB/com_tags.ini
@@ -65,6 +65,7 @@ COM_TAGS_FILTER_SEARCH_LABEL="Search Tags"
 COM_TAGS_FLOAT_LABEL="Float"
 COM_TAGS_HAS_SUBCATEGORY_ITEMS="%d items are assigned to this tag's subtags."
 COM_TAGS_HAS_SUBCATEGORY_ITEMS_1="An item is assigned to one of this tag's subtags."
+COM_TAGS_HEADING_TAGTYPE="Tag Type"
 COM_TAGS_INCLUDE="Include"
 COM_TAGS_INCLUDE_CHILDREN_LABEL="Child Tags"
 COM_TAGS_ITEMS_SEARCH_FILTER="Search"
