--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -525,8 +525,8 @@ JGLOBAL_PASSWORD="Password"
 JGLOBAL_PASSWORD_RESET_REQUIRED="You are required to reset your password before proceeding."
 JGLOBAL_PERMISSIONS_ANCHOR="Set Permissions"
 JGLOBAL_PREVIEW="Preview"
-JGLOBAL_PREVIEW_POSITION="<span>Position&nbsp;:</span> %s"
-JGLOBAL_PREVIEW_STYLE="<span>Style&nbsp;:</span> %s"
+JGLOBAL_PREVIEW_POSITION="<span>Position:</span> %s"
+JGLOBAL_PREVIEW_STYLE="<span>Style:</span> %s"
 JGLOBAL_PUBLISHED_DATE="Published Date"
 JGLOBAL_RANDOM_ORDER="Random Order"
 JGLOBAL_RATINGS="Ratings"
