Separate transition dropdown in articles list view (#102)

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -115,6 +115,10 @@ JREGISTER="Register"
 JORDERINGDISABLED="Please sort by order to enable reordering"
 JSAVE="Save &amp; Close"
 JSELECT="Select"
+JSTAGE="Stage"
+JSTATUS="Status"
+JSTAGE_ASC="Stage ascending"
+JSTAGE_DESC="Stage descending"
 JSTATUS="Status"
 JSTATUS_ASC="Status ascending"
 JSTATUS_DESC="Status descending"
@@ -135,6 +139,7 @@ JUNPROTECTED="Unprotected"
 JUNPUBLISHED="Unpublished"
 JVISIT_LINK="Visit Link"
 JVISIT_WEBSITE="Visit Website"
+JWORKFLOW="Workflow: %s"
 JYEAR="Year"
 JVERSION="Version"
 JYES="Yes"
