Rename default workflow/stage to "basic"

--- a/administrator/language/en-GB/com_workflow.ini
+++ b/administrator/language/en-GB/com_workflow.ini
@@ -6,6 +6,7 @@
 COM_WORKFLOW_ARE_YOU_SURE="Are you sure?"
 COM_WORKFLOW_AUTHOR="Author"
 COM_WORKFLOW_BASIC_TAB="Basic"
+COM_WORKFLOW_BASIC_STAGE="Basic Stage"
 COM_WORKFLOW_CHOOSE_CONTEXT_LABEL="Context"
 COM_WORKFLOW_CONDITION="Condition of items in this stage: "
 COM_WORKFLOW_CONDITION_DESC="Defines item behaviour."
@@ -22,7 +23,7 @@ COM_WORKFLOW_DATE_CREATED="Date Created"
 COM_WORKFLOW_DATE_MODIFIED="Date Modified"
 COM_WORKFLOW_DEFAULT="Default"
 COM_WORKFLOW_DEFAULT_ITEM="Default option is already set for a different item."
-COM_WORKFLOW_DEFAULT_WORKFLOW="Joomla! Default"
+COM_WORKFLOW_BASIC_WORKFLOW="Basic Workflow"
 COM_WORKFLOW_DESCRIPTION="Description"
 COM_WORKFLOW_DESC_TAB="Description"
 COM_WORKFLOW_DISABLE_DEFAULT="Cannot change default stage of this item."
