[4.0] Add Cross-Origin-Opener-Policy to the HTTP Headers Plugin (#29030)

--- a/administrator/language/en-GB/plg_system_httpheaders.ini
+++ b/administrator/language/en-GB/plg_system_httpheaders.ini
@@ -9,6 +9,8 @@ PLG_SYSTEM_HTTPHEADERS_ADDITIONAL_HEADER="Force HTTP Headers"
 ; Please do not translate the word 'HTTP Header' in the following two language strings
 PLG_SYSTEM_HTTPHEADERS_ADDITIONAL_HEADER_KEY="HTTP Header"
 PLG_SYSTEM_HTTPHEADERS_ADDITIONAL_HEADER_VALUE="HTTP Header Value"
+; Please do not translate the following language string
+PLG_SYSTEM_HTTPHEADERS_COOP="Cross-Origin-Opener-Policy"
 PLG_SYSTEM_HTTPHEADERS_HEADER_CLIENT="Client"
 PLG_SYSTEM_HTTPHEADERS_HEADER_CLIENT_BOTH="Both"
 ; Please do not translate the following language string
