[4.0] Converting several mails to mail templates (#28722)

--- a/administrator/language/en-GB/com_contact.ini
+++ b/administrator/language/en-GB/com_contact.ini
@@ -141,6 +141,10 @@ COM_CONTACT_HEADING_ASSOCIATION="Association"
 COM_CONTACT_ICONS_SETTINGS="Icons"
 COM_CONTACT_ID_LABEL="ID"
 COM_CONTACT_MAIL_FIELDSET_LABEL="Mail Options"
+COM_CONTACT_MAIL_MAIL_COPY_DESC="This mail is sent to the submitter of a mail with the contact form if option \"Send Copy to Submitter\" is switched on in the form settings."
+COM_CONTACT_MAIL_MAIL_COPY_TITLE="Contacts: Contact Form Mail Copy"
+COM_CONTACT_MAIL_MAIL_DESC="This mail is sent with the contact form."
+COM_CONTACT_MAIL_MAIL_TITLE="Contacts: Contact Form Mail"
 COM_CONTACT_MANAGER_CONTACTS="Contacts"
 COM_CONTACT_MANAGER_CONTACT_EDIT="Contacts: Edit"
 COM_CONTACT_MANAGER_CONTACT_NEW="Contacts: New"
