--- a/language/en-GB/com_contact.ini
+++ b/language/en-GB/com_contact.ini
@@ -18,8 +18,8 @@ COM_CONTACT_FILTER_SEARCH_DESC="Contact Filter Search"
 COM_CONTACT_CHECKED_OUT_BY="Checked out by %s"
 COM_CONTACT_CONTACT_MESSAGE_SUBJECT_LABEL="Subject"
 COM_CONTACT_CONTACT_SEND="Send Email"
-COM_CONTACT_COPYSUBJECT_OF="Copy of: %s"
-COM_CONTACT_COPYTEXT_OF="This is a copy of the following message you sent to %s via %s"
+COM_CONTACT_COPYSUBJECT_OF="Copy of: {SUBJECT}"
+COM_CONTACT_COPYTEXT_OF="This is a copy of the following message you sent to {CONTACTNAME} via {SITENAME}\n\n{BODY}"
 COM_CONTACT_COUNT="Contact count:"
 COM_CONTACT_COUNTRY="Country"
 COM_CONTACT_DEFAULT_PAGE_TITLE="Contacts"
@@ -29,7 +29,8 @@ COM_CONTACT_EDIT_CONTACT="Edit Contact"
 COM_CONTACT_EMAIL_FORM="Contact Form"
 COM_CONTACT_EMAIL_LABEL="Email"
 COM_CONTACT_EMAIL_THANKS="Thank you for your email."
-COM_CONTACT_ENQUIRY_TEXT="This is an enquiry email via %s from:"
+COM_CONTACT_ENQUIRY_SUBJECT="{SITENAME}: {SUBJECT}"
+COM_CONTACT_ENQUIRY_TEXT="This is an enquiry email via {URL} from:\n{NAME} <{EMAIL}>\n\n{BODY}\n\n{CUSTOMFIELDS}"
 COM_CONTACT_ERROR_CONTACT_NOT_FOUND="Contact not found"
 COM_CONTACT_FAX="Fax"
 COM_CONTACT_FAX_NUMBER="Fax: %s"
