--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -654,7 +654,6 @@ JGLOBAL_WARNCOOKIES="Warning! Cookies must be enabled to access the Administrato
 JGLOBAL_WARNIE="Warning! Internet Explorer should not be used for proper operation of the Administrator Backend."
 JGLOBAL_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation of the Administrator Backend."
 JGLOBAL_WIDTH="Width"
-JGLOBAL_WORKFLOW_ENABLED_LABEL="Enable Workflows"
 
 JGRID_HEADING_ACCESS="Access"
 JGRID_HEADING_ACCESS_ASC="Access ascending"
@@ -998,6 +997,16 @@ JWARNING_TRASH_MUST_SELECT="You must select at least one item to remove."
 JWARNING_DELETE_MUST_SELECT="You must select at least one item to permanently delete."
 JWARNING_REMOVE_ROOT_USER="You are logged-in using the emergency Root User setting in configuration.php.<br>You should remove $root_user from the configuration.php as soon as you have restored control to your site to avoid future security breaches.<br><a href='%s'>Select here to try to do it automatically.</a>"
 JWARNING_REMOVE_ROOT_USER_ADMIN="The emergency Root User setting is enabled for the user(id): %s.<br>You should remove $root_user from the configuration.php as soon as you have restored control to your site to avoid future security breaches.<br><a href='%s'>Select here to try to do it automatically.</a>"
+
+; Workflow
+JWORKFLOW_TITLE="Workflow"
+JWORKFLOW_ENABLED_LABEL="Enable Workflow"
+JWORKFLOW_FUNCTIONALITY_CORE_STATE_LABEL="Enable Workflow state functionality"
+JWORKFLOW_FUNCTIONALITY_CORE_FEATURED_LABEL="Enable Workflow featured functionality"
+JWORKFLOW_EXTENSION_WHITELIST_LABEL="Extension Whitelist"
+JWORKFLOW_EXTENSION_WHITELIST_DESCRIPTION="Activate this plugin only for listed extensions. One extension per line (ex. com_content.article). If used all other extensions are disabled."
+JWORKFLOW_EXTENSION_BLACKLIST_LABEL="Extension Blacklist"
+JWORKFLOW_EXTENSION_BLACKLIST_DESCRIPTION="Disable this plugin for listed extensions. One extension per line (ex. com_content.article)."
 
 ; Date format
 
