Add a11y features to the transition button

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -139,7 +139,6 @@ JUNPROTECTED="Unprotected"
 JUNPUBLISHED="Unpublished"
 JVISIT_LINK="Visit Link"
 JVISIT_WEBSITE="Visit Website"
-JWORKFLOW="Workflow: %s"
 JYEAR="Year"
 JVERSION="Version"
 JYES="Yes"
@@ -999,8 +998,11 @@ JWARNING_REMOVE_ROOT_USER="You are logged-in using the emergency Root User setti
 JWARNING_REMOVE_ROOT_USER_ADMIN="The emergency Root User setting is enabled for the user(id): %s.<br>You should remove $root_user from the configuration.php as soon as you have restored control to your site to avoid future security breaches.<br><a href='%s'>Select here to try to do it automatically.</a>"
 
 ; Workflow
+JWORKFLOW="Workflow: %s"
 JWORKFLOW_TITLE="Workflow"
 JWORKFLOW_ENABLED_LABEL="Enable Workflow"
+JWORKFLOW_EXECUTE_TRANSITION="Select the transition to execute on this item."
+JWORKFLOW_SHOW_TRANSITIONS_FOR_THIS_ITEM="Show the transition selection to execute a transition on this item."
 JWORKFLOW_FUNCTIONALITY_CORE_STATE_LABEL="Enable Workflow state functionality"
 JWORKFLOW_FUNCTIONALITY_CORE_FEATURED_LABEL="Enable Workflow featured functionality"
 JWORKFLOW_EXTENSION_WHITELIST_LABEL="Extension Whitelist"
