Improve notification description text

--- a/administrator/language/en-GB/plg_workflow_notification.ini
+++ b/administrator/language/en-GB/plg_workflow_notification.ini
@@ -17,7 +17,7 @@ PLG_WORKFLOW_NOTIFICATION_RECEIVERS_LABEL="More Receivers"
 PLG_WORKFLOW_NOTIFICATION_RECEIVERS_SELECT="Select single receivers for the notification"
 PLG_WORKFLOW_NOTIFICATION_SENDMAIL_LABEL="Send Notification"
 PLG_WORKFLOW_NOTIFICATION_SENT="Notifications have been sent"
-PLG_WORKFLOW_NOTIFICATION_USERGROUP_DESC="The users in this usergroup get an E-Mail if this transition has been performed"
+PLG_WORKFLOW_NOTIFICATION_USERGROUP_DESC="The users in this usergroup get a notification if this transition has been performed"
 PLG_WORKFLOW_NOTIFICATION_USERGROUP_LABEL="Usergroups"
 PLG_WORKFLOW_NOTIFICATION_USERGROUP_SELECT="Select usergroups"
 PLG_WORKFLOW_NOTIFICATION_XML_DESCRIPTION="Send Notification if a Transition has been performed in a Workflow"
