--- a/administrator/language/en-GB/com_workflow.ini
+++ b/administrator/language/en-GB/com_workflow.ini
@@ -26,7 +26,7 @@ COM_WORKFLOW_DEFAULT_ITEM="Default option is already set for a different item."
 COM_WORKFLOW_BASIC_WORKFLOW="Basic Workflow"
 COM_WORKFLOW_DESCRIPTION="Description"
 COM_WORKFLOW_DESC_TAB="Description"
-COM_WORKFLOW_DISABLE_DEFAULT="Cannot change default stage of this item."
+COM_WORKFLOW_DISABLE_DEFAULT="The default status cannot be changed."
 COM_WORKFLOW_EDIT="Edit"
 COM_WORKFLOW_EDIT_TAB="Edit"
 COM_WORKFLOW_ERROR_EXTENSION_NOT_SET="Extension not set."
@@ -120,7 +120,7 @@ COM_WORKFLOW_TRANSITION_NOTE="Note"
 COM_WORKFLOW_TRANSITION_THE_SAME_STAGE="Current stage and target stage are the same."
 COM_WORKFLOW_TRASHED="Trashed"
 COM_WORKFLOW_UNPUBLISHED="Unpublished"
-COM_WORKFLOW_UNPUBLISH_DEFAULT_ERROR="You can't unpublish the default workflow."
+COM_WORKFLOW_UNPUBLISH_DEFAULT_ERROR="The default workflow cannot be disabled."
 COM_WORKFLOW_USER_GROUPS="User Group"
 COM_WORKFLOW_USER_GROUPS_DESC="Select user group."
 COM_WORKFLOW_USE_DEFAULT_WORKFLOW="Use default (%s)"
