Add Workflow Component Sections Field (#108)
* Remove component workflow options

* Fix pagenavigation query

* Add Workflow Component Sections Field

* cs

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -1004,10 +1004,10 @@ JWORKFLOW_ENABLED_LABEL="Enable Workflow"
 JWORKFLOW_EXECUTE_TRANSITION="Select the transition to execute on this item."
 JWORKFLOW_SHOW_TRANSITIONS_FOR_THIS_ITEM="Show the transition selection to execute a transition on this item."
 JWORKFLOW_EXTENSION_WHITELIST_LABEL="Extension Whitelist"
-JWORKFLOW_EXTENSION_WHITELIST_DESCRIPTION="Activate this plugin only for listed extensions. One extension per line (ex. com_content.article). If used all other extensions are disabled."
+JWORKFLOW_EXTENSION_WHITELIST_DESCRIPTION="Activate this plugin only for listed extensions. If used all other extensions are disabled."
 JWORKFLOW_EXTENSION_BLACKLIST_LABEL="Extension Blacklist"
-JWORKFLOW_EXTENSION_BLACKLIST_DESCRIPTION="Disable this plugin for listed extensions. One extension per line (ex. com_content.article)."
-
+JWORKFLOW_EXTENSION_BLACKLIST_DESCRIPTION="Disable this plugin for listed extensions."
+JWORKFLOW_FIELD_COMPONENT_SECTIONS_TEXT="%1$s: %2$s"
 ; Date format
 
 DATE_FORMAT_LC="l, d F Y"
