--- a/administrator/language/en-GB/plg_workflow_notification.ini
+++ b/administrator/language/en-GB/plg_workflow_notification.ini
@@ -5,16 +5,13 @@
 
 COM_WORKFLOW_NOTIFICATION_FIELDSET_LABEL="Notification"
 PLG_WORKFLOW_NOTIFICATION="Workflow - Notification"
-PLG_WORKFLOW_NOTIFICATION_ADDTEXT="The state has changed"
-PLG_WORKFLOW_NOTIFICATION_ADDTEXT_AUTHOR_DESC="You can localise the text by using a Language key and make language overrides."
-PLG_WORKFLOW_NOTIFICATION_ADDTEXT_AUTHOR_LABEL="Additional Message to Author"
-PLG_WORKFLOW_NOTIFICATION_ADDTEXT_DESC="You can localise the text by using a Language key and make language overrides."
-PLG_WORKFLOW_NOTIFICATION_ADDTEXT_LABEL="Additional Message Text"
-PLG_WORKFLOW_NOTIFICATION_EMAIL_AUTHOR_LABEL="Email the Author"
+PLG_WORKFLOW_NOTIFICATION_ADDTEXT="The stage has changed"
+PLG_WORKFLOW_NOTIFICATION_ADDTEXT_DESC="This text will be sent: Title [title], Changed by [user], New State: [state]. You can add own Text to this information. You can localise the Text by using a Language key and make language overrides."
+PLG_WORKFLOW_NOTIFICATION_ADDTEXT_LABEL="Additional Message Text."
 PLG_WORKFLOW_NOTIFICATION_ON_TRANSITION_SUBJECT="The status of an '%1$s' has been changed";
 PLG_WORKFLOW_NOTIFICATION_ON_TRANSITION_MSG="Title: '%1$s', Changed by '%2$s',  New State: '%3$s'."
-PLG_WORKFLOW_NOTIFICATION_RECEIVERS_LABEL="More Receivers"
-PLG_WORKFLOW_NOTIFICATION_RECEIVERS_SELECT="Select single receivers for the notification"
+PLG_WORKFLOW_NOTIFICATION_RECEIVERS_LABEL="Users"
+PLG_WORKFLOW_NOTIFICATION_RECEIVERS_SELECT="Select single  Users who obtain a Notification"
 PLG_WORKFLOW_NOTIFICATION_SENDMAIL_LABEL="Send Notification"
 PLG_WORKFLOW_NOTIFICATION_SENT="Notifications have been sent"
 PLG_WORKFLOW_NOTIFICATION_USERGROUP_DESC="The users in this usergroup get a notification if this transition has been performed"
