[4.0] Add Copy to Clipboard button for API token (#29005)

--- a/administrator/language/en-GB/plg_user_token.ini
+++ b/administrator/language/en-GB/plg_user_token.ini
@@ -4,6 +4,10 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_USER_TOKEN="User - Joomla API Token"
+PLG_USER_TOKEN_COPY="Copy"
+PLG_USER_TOKEN_COPY_DESC="Copy the token to your clipboard"
+PLG_USER_TOKEN_COPY_SUCCESS="Token copied."
+PLG_USER_TOKEN_COPY_FAIL="Failed to copy token."
 PLG_USER_TOKEN_ENABLED_DESC="Set to No to temporarily prevent access to your site with this token."
 PLG_USER_TOKEN_ENABLED_LABEL="Active"
 PLG_USER_TOKEN_GROUP_DESC="Manage the security tokens used for authenticating to the Joomla API application (remote access to your site). If you are not sure what this does chances are you don't need it and can safely ignore these settings."
