--- a/administrator/language/en-GB/com_installer.ini
+++ b/administrator/language/en-GB/com_installer.ini
@@ -255,7 +255,7 @@ COM_INSTALLER_UPDATE_FILTER_SEARCH_LABEL="Search Extensions with Updates"
 COM_INSTALLER_UPDATE_TABLE_CAPTION="table of Extensions with Updates"
 COM_INSTALLER_UPDATESITE_DISABLE="Disable update site"
 COM_INSTALLER_UPDATESITE_DISABLED="Disabled update site"
-COM_INSTALLER_UPDATESITE_EDIT_TIP="Edit the Update Site “%s” for extension ‘%s’"
+COM_INSTALLER_UPDATESITE_EDIT_TIP="Edit the Update Site '%1s' for '%2s'"
 COM_INSTALLER_UPDATESITE_EDIT_TITLE="Edit Update Site"
 COM_INSTALLER_UPDATESITE_ENABLE="Enable update site"
 COM_INSTALLER_UPDATESITE_ENABLED="Enabled update site"
