Add table rename to database schema check (#29357)

--- a/administrator/language/en-GB/com_installer.ini
+++ b/administrator/language/en-GB/com_installer.ini
@@ -121,6 +121,7 @@ COM_INSTALLER_MSG_DATABASE_ERRORS_0="No Problems"
 COM_INSTALLER_MSG_DATABASE_ERRORS_1="One Problem"
 COM_INSTALLER_MSG_DATABASE_FILTER_ERROR="No default text filters found."
 COM_INSTALLER_MSG_DATABASE_INFO="Other Information"
+COM_INSTALLER_MSG_DATABASE_RENAME_TABLE="Table %2$s does not exist. (From file %1$s.)"
 COM_INSTALLER_MSG_DATABASE_SCHEMA_ERROR="Database version (<strong>%1$s</strong>) does not match manifest version (<strong>%2$s</strong>)."
 COM_INSTALLER_MSG_DATABASE_SCHEMA_VERSION="Database version (in #__schemas): %s."
 COM_INSTALLER_MSG_DATABASE_SKIPPED="%s database changes did not alter table structure and were skipped."
