[4.0] Mail Templates descriptions (#29417)
Updates the text used to describe the mail templates to simplify the text (less is more) and comply with the guidelines

--- a/administrator/language/en-GB/com_config.ini
+++ b/administrator/language/en-GB/com_config.ini
@@ -171,7 +171,7 @@ COM_CONFIG_HEADING_DESCRIPTION="Description"
 COM_CONFIG_HEADING_LANUAGES="Languages"
 COM_CONFIG_LOCATION_SETTINGS="Location"
 COM_CONFIG_MAIL_SETTINGS="Mail"
-COM_CONFIG_MAIL_TEST_MAIL_DESC="This mail is sent when you click the &quot;Send Test Mail&quot; button in the Global Configuration. It is sent to the sending mail address that is set in the mail settings."
+COM_CONFIG_MAIL_TEST_MAIL_DESC="Sent when you click the &quot;Send Test Mail&quot; button in the Global Configuration. It is sent to the sending mail address that is set in the mail settings."
 COM_CONFIG_MAIL_TEST_MAIL_TITLE="Global Configuration: Test Mail"
 COM_CONFIG_METADATA_SETTINGS="Metadata"
 COM_CONFIG_PAGE_EDIT_MAIL="Global Configuration: Edit Mail Template"
