--- a/administrator/language/en-GB/com_users.ini
+++ b/administrator/language/en-GB/com_users.ini
@@ -178,17 +178,17 @@ COM_USERS_MAIL_FIELD_SEND_AS_BLIND_CARBON_COPY_LABEL="Recipients as BCC"
 COM_USERS_MAIL_FIELD_SEND_IN_HTML_MODE_LABEL="Send in HTML Mode"
 COM_USERS_MAIL_FIELD_SUBJECT_LABEL="Subject"
 COM_USERS_MAIL_FIELD_VALUE_ALL_USERS_GROUPS="All Users Groups"
-COM_USERS_MAIL_MASSMAIL_MAIL_DESC="This mail is sent with the \"Mass Mail Users\" form in backend."
+COM_USERS_MAIL_MASSMAIL_MAIL_DESC="The &quot;Mass Mail Users&quot; email."
 COM_USERS_MAIL_MASSMAIL_MAIL_TITLE="Users: Mass Mail Users"
 COM_USERS_MAIL_NO_USERS_COULD_BE_FOUND_IN_THIS_GROUP="No users could be found in this group."
 COM_USERS_MAIL_ONLY_YOU_COULD_BE_FOUND_IN_THIS_GROUP="You are the only user in this group."
-COM_USERS_MAIL_PASSWORD_RESET_DESC="This mail is sent to a user by using the \"Forgot your password?\" link e.g. in a login form."
+COM_USERS_MAIL_PASSWORD_RESET_DESC="Sent to a user by the &quot;Forgot your password?&quot; link eg in a login form."
 COM_USERS_MAIL_PASSWORD_RESET_TITLE="Users: Password Reset"
 COM_USERS_MAIL_PLEASE_FILL_IN_THE_FORM_CORRECTLY="Please fill in the form correctly."
 COM_USERS_MAIL_PLEASE_FILL_IN_THE_MESSAGE="Please enter a message"
 COM_USERS_MAIL_PLEASE_FILL_IN_THE_SUBJECT="Please enter a subject"
 COM_USERS_MAIL_PLEASE_SELECT_A_GROUP="Please select a Group"
-COM_USERS_MAIL_REMINDER_DESC="This mail is sent to a user by using the \"Forgot your username?\" link e.g. in a login form."
+COM_USERS_MAIL_REMINDER_DESC="Sent to a user by the &quot;Forgot your username?&quot; link eg in a login form."
 COM_USERS_MAIL_REMINDER_TITLE="Users: Username Reminder"
 COM_USERS_MAIL_THE_MAIL_COULD_NOT_BE_SENT="The mail could not be sent."
 COM_USERS_MASS_MAIL="Mass Mail Users"
