--- a/administrator/language/en-GB/com_languages.ini
+++ b/administrator/language/en-GB/com_languages.ini
@@ -87,8 +87,8 @@ COM_LANGUAGES_N_ITEMS_PUBLISHED="%d Content Languages published."
 COM_LANGUAGES_N_ITEMS_PUBLISHED_1="Content Language published."
 COM_LANGUAGES_N_ITEMS_TRASHED="%d Content Languages trashed."
 COM_LANGUAGES_N_ITEMS_TRASHED_1="Content Language trashed."
-COM_LANGUAGES_N_ITEMS_UNPUBLISHED="%d Content Languages unpublished. <br><strong class=\"red\">Warning!</strong> When using the multilingual functionality (ie when the plugin System - Language Filter is enabled) the Site Default Language also has to be a published Content language."
-COM_LANGUAGES_N_ITEMS_UNPUBLISHED_1="Content Language unpublished. <br><strong class=\"red\">Warning!</strong> When using the multilingual functionality (ie when the plugin System - Language Filter is enabled) the Site Default Language also has to be a published Content language."
+COM_LANGUAGES_N_ITEMS_UNPUBLISHED="%d Content Languages unpublished. <br><strong>Warning!</strong> When using the multilingual functionality (ie when the plugin System - Language Filter is enabled) the Site Default Language must have an assigned published Content language."
+COM_LANGUAGES_N_ITEMS_UNPUBLISHED_1="Content Language unpublished. <br><strong>Warning!</strong> When using the multilingual functionality (ie when the plugin System - Language Filter is enabled) the Site Default Language must have an assigned published Content language."
 COM_LANGUAGES_OVERRIDES_TABLE_CAPTION="Table of Language Overrides"
 COM_LANGUAGES_OVERRIDE_ERROR_RESERVED_WORDS="YES, NO, NULL, FALSE, ON, OFF, NONE, TRUE are reserved words and can't be used as language constants."
 COM_LANGUAGES_OVERRIDE_FIELD_BOTH_LABEL="For Both Locations"
