--- a/administrator/language/en-GB/com_workflow.sys.ini
+++ b/administrator/language/en-GB/com_workflow.sys.ini
@@ -4,6 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_WORKFLOW="Workflows"
+COM_WORKFLOW_BASIC_STAGE="Basic Stage"
 COM_WORKFLOW_BASIC_WORKFLOW="Basic Workflow"
 COM_WORKFLOW_MESSAGES_VIEW_DEFAULT_DESC="Customised workflow support for Joomla! site"
 COM_WORKFLOW_MESSAGES_VIEW_DEFAULT_TITLE="Workflows"
