[4.0] [Workflow] Implement the whole permission system for the workflow (#29263)

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -155,6 +155,7 @@ JACTION_EDITVALUE="Edit Custom Field Value"
 JACTION_EDITSTATE="Edit State"
 JACTION_EDIT_MODULE="Edit the '%s' module"
 JACTION_EXECUTETRANSITION="Execute Transition"
+JACTION_MANAGEWORKFLOW="Manage Workflows"
 JACTION_LOGIN_ADMIN="Administrator Login"
 JACTION_LOGIN_API="Web Services Login"
 JACTION_LOGIN_OFFLINE="Offline Access"
