--- a/administrator/language/en-GB/com_workflow.ini
+++ b/administrator/language/en-GB/com_workflow.ini
@@ -48,12 +48,12 @@ COM_WORKFLOW_MODIFIED_AT_ASC="Date Modified ascending"
 COM_WORKFLOW_MODIFIED_AT_DESC="Date Modified descending"
 COM_WORKFLOW_MODIFIED_DESC="Date Modified"
 COM_WORKFLOW_MODIFIED_LABEL="Date Modified"
-COM_WORKFLOW_MSG_DELETE_DEFAULT="You are trying to delete the default item."
 COM_WORKFLOW_MSG_DELETE_IS_DEFAULT="You can't delete the default item."
+COM_WORKFLOW_MSG_DISABLE_DEFAULT="The default item has to stay published."
 COM_WORKFLOW_MSG_DELETE_STAGE_IS_ASSIGNED="This stage is in use by the component."
 COM_WORKFLOW_MSG_DELETE_WORKFLOW_IS_ASSIGNED="This workflow is in use by the component."
 COM_WORKFLOW_MSG_FROM_TO_STAGE="From Stage and To Stage must have different names."
-COM_WORKFLOW_MSG_WORKFLOWS_DELETE_ERROR="There was a problem while deleting the item: "
+COM_WORKFLOW_MSG_WORKFLOWS_DELETE_ERROR="There was a problem while deleting the item: %s"
 COM_WORKFLOW_NA="N/A"
 COM_WORKFLOW_NAME="Name"
 COM_WORKFLOW_NEW="New"
