--- a/installation/language/en-US/joomla.ini
+++ b/installation/language/en-US/joomla.ini
@@ -201,7 +201,7 @@ INSTL_OUTPUT_BUFFERING="Output Buffering"
 INSTL_PHP_VERSION="PHP Version"
 INSTL_PHP_VERSION_NEWER="PHP Version >= %s"
 INSTL_SESSION_AUTO_START="Session Auto Start"
-INSTL_WRITABLE="No sufficient permissions to create %s"
+INSTL_WRITABLE="Insufficient permission to create %s"
 INSTL_ZIP_SUPPORT_AVAILABLE="Native ZIP support"
 INSTL_PROCESS_BUSY="Process is in progress. Please wait ..."
 INSTL_ERROR="Error"
