Add language string (#29627)

--- a/administrator/language/en-GB/com_tags.ini
+++ b/administrator/language/en-GB/com_tags.ini
@@ -55,6 +55,7 @@ COM_TAGS_FIELD_TAG_BODY_LABEL="Description."
 COM_TAGS_FIELD_TAG_LABEL="Tag"
 COM_TAGS_FIELD_TAG_LINK_CLASS="CSS Class for tag link"
 COM_TAGS_FIELD_TYPE_LABEL="Select Content Type"
+COM_TAGS_FIELD_VERSION_LABEL="Revision"
 COM_TAGS_FIELDSET_DETAILS="Tag Details"
 COM_TAGS_FIELDSET_OPTIONS="Options"
 COM_TAGS_FIELDSET_PUBLISHING="Publishing"
