--- a/installation/language/en-US/joomla.ini
+++ b/installation/language/en-US/joomla.ini
@@ -204,6 +204,7 @@ JGLOBAL_SELECT_NO_RESULTS_MATCH="No results match"
 JGLOBAL_SELECT_SOME_OPTIONS="Select some options"
 JHIDEPASSWORD="Hide Password"
 JINVALID_TOKEN="The most recent request was denied because it had an invalid security token. Please refresh the page and try again."
+JINVALID_TOKEN_NOTICE="The security token did not match. The request was aborted to prevent any security breach. Please try again."
 JNEXT="Next"
 JNO="No"
 JNOTICE="Notice"
