--- a/administrator/language/en-GB/plg_workflow_notification.ini
+++ b/administrator/language/en-GB/plg_workflow_notification.ini
@@ -7,7 +7,7 @@ COM_WORKFLOW_NOTIFICATION_FIELDSET_LABEL="Notification"
 COM_WORKFLOW_BASIC_STAGE="Basic Stage"
 PLG_WORKFLOW_NOTIFICATION="Workflow - Notification"
 PLG_WORKFLOW_NOTIFICATION_ADDTEXT="The stage has changed"
-PLG_WORKFLOW_NOTIFICATION_ADDTEXT_DESC="This text will be sent: Title [title], changed by [user], new state: [state]. You can add own text to this information. You can localise the text by using a language key and make language overrides."
+PLG_WORKFLOW_NOTIFICATION_ADDTEXT_DESC="This text will be sent: Title [title], changed by [user], new state: [state]. You can add own text to this information. You can localise the text by using a language key and creating a language override."
 PLG_WORKFLOW_NOTIFICATION_ADDTEXT_LABEL="Additional message text."
 PLG_WORKFLOW_NOTIFICATION_ON_TRANSITION_MSG="Title: %1$s, changed by %2$s, new state: %3$s."
 PLG_WORKFLOW_NOTIFICATION_ON_TRANSITION_SUBJECT="The status of an %1$s has been changed";
