Fix language strings for javascript and commit fullstops in file

--- a/installation/language/en-US/joomla.ini
+++ b/installation/language/en-US/joomla.ini
@@ -6,14 +6,14 @@
 ; Build incomplete error page
 ; These will be processed by the JavaScript Build
 BUILD_INCOMPLETE_HEADER="Environment Setup Incomplete"
-BUILD_INCOMPLETE_LANGUAGE="English GB"
+BUILD_INCOMPLETE_LANGUAGE="English US"
 BUILD_INCOMPLETE_TEXT="It looks like you are trying to run Joomla! from our git repository. To do so requires you complete a couple of extra steps first."
 BUILD_INCOMPLETE_URL_TEXT="More Details"
 
 ; Minimum PHP error page
 ; These will be processed by the JavaScript Build
 MIN_PHP_ERROR_HEADER="Sorry, your PHP version is not supported."
-MIN_PHP_ERROR_LANGUAGE="English GB"
+MIN_PHP_ERROR_LANGUAGE="English US"
 MIN_PHP_ERROR_TEXT="Your host needs to use PHP version {{phpversion}} or newer to run this version of Joomla."
 MIN_PHP_ERROR_URL_TEXT="Help me resolve this"
 
