--- a/api/language/en-GB/joomla.ini
+++ b/api/language/en-GB/joomla.ini
@@ -721,6 +721,7 @@ JHELP_COMPONENTS_FIELDS_FIELDS="Components_Fields_Fields"
 JHELP_COMPONENTS_FIELDS_FIELDS_EDIT="Components_Fields_Fields_Edit"
 JHELP_COMPONENTS_FINDER_MANAGE_CONTENT_MAPS="Components_Finder_Manage_Content_Maps"
 JHELP_COMPONENTS_FINDER_MANAGE_INDEXED_CONTENT="Components_Finder_Manage_Indexed_Content"
+JHELP_COMPONENTS_FINDER_MANAGE_SEARCHES="Components_Finder_Manage_Searches"
 JHELP_COMPONENTS_FINDER_MANAGE_SEARCH_FILTERS="Components_Finder_Manage_Search_Filters"
 JHELP_COMPONENTS_FINDER_MANAGE_SEARCH_FILTERS_EDIT="Components_Finder_Manage_Search_Filters_Edit"
 JHELP_COMPONENTS_INSTALLER_CONFIGURATION="Components_Installer_Configuration"
