--- a/api/language/en-GB/joomla.ini
+++ b/api/language/en-GB/joomla.ini
@@ -754,6 +754,9 @@ JHELP_COMPONENTS_TAGS_MANAGER_EDIT="Components_Tags_Manager_Edit"
 JHELP_COMPONENTS_USERS_CATEGORIES="Users_User_Note_Categories"
 JHELP_COMPONENTS_USERS_CATEGORY_ADD="Users_User_Note_Category_Edit"
 JHELP_COMPONENTS_USERS_CATEGORY_EDIT="Users_User_Note_Category_Edit"
+JHELP_COMPONENTS_WORKFLOW_STAGES_LIST="Components_Workflows_Stages_List"
+JHELP_COMPONENTS_WORKFLOW_TRANSITIONS_LIST="Components_Workflows_Transitions_List"
+JHELP_COMPONENTS_WORKFLOW_WORKFLOWS_LIST="Components_Workflows_Lists"
 JHELP_CONTENT_ARTICLE_MANAGER="Content_Article_Manager"
 JHELP_CONTENT_ARTICLE_MANAGER_EDIT="Content_Article_Manager_Edit"
 JHELP_CONTENT_FEATURED_ARTICLES="Content_Featured_Articles"
