--- a/administrator/language/en-GB/com_languages.ini
+++ b/administrator/language/en-GB/com_languages.ini
@@ -56,6 +56,7 @@ COM_LANGUAGES_INSTALL="Install Languages"
 COM_LANGUAGES_INSTALLED_FILTER_SEARCH_DESC="Search in title and language tag."
 COM_LANGUAGES_INSTALLED_FILTER_SEARCH_LABEL="Search Installed Languages"
 COM_LANGUAGES_INSTALLED_TABLE_CAPTION="Table of Installed Languages"
+COM_LANGUAGES_LANGUAGE_NEW_LANGUAGE_TITLE="New Content Language Details"
 COM_LANGUAGES_MSG_DEFAULT_LANGUAGE_SAVED="Default Language Saved. This does not affect users that have chosen a specific language on their profile or on the login page."
 COM_LANGUAGES_MSG_DEFAULT_MULTILANG_SAVED="Default Language Saved. This does not affect users that have chosen a specific language on their profile or on the login page.<br><strong>Warning!</strong> The Site Default Language also has to be a published Content language."
 COM_LANGUAGES_MSG_SWITCH_ADMIN_LANGUAGE_SUCCESS="The Administrator Language has been switched to &quot;<strong>%s</strong>&quot;."
