--- a/api/language/en-GB/install.xml
+++ b/api/language/en-GB/install.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<extension version="4.0" client="api" type="language" method="upgrade">
+<extension client="api" type="language" method="upgrade">
 	<name>English (en-GB)</name>
 	<tag>en-GB</tag>
 	<version>4.0.0</version>
