--- a/api/language/en-GB/langmetadata.xml
+++ b/api/language/en-GB/langmetadata.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<metafile version="4.0" client="api">
+<metafile client="api">
 	<name>English (en-GB)</name>
 	<version>4.0.0</version>
 	<creationDate>June 2020</creationDate>
