[4.0] Media Action plugins (#29970)
* [4.0] Media Action plugins

This PR does the following

1. removes unused strings
2. changes labelclass="d-none" to hiddenLabel in the xml
3. adds missing labels (even if they are not visible)

ToDo in a later PR change the radio buttons in rotate to real buttons in a button group. The current code breaks accessibility but thats for another PR

* xml

--- a/administrator/language/en-GB/plg_media-action_crop.ini
+++ b/administrator/language/en-GB/plg_media-action_crop.ini
@@ -5,6 +5,7 @@
 
 PLG_MEDIA-ACTION_CROP="Media Action - Crop"
 PLG_MEDIA-ACTION_CROP_LABEL="Crop"
+PLG_MEDIA-ACTION_CROP_PARAM_ASPECT="Aspect Ratio"
 PLG_MEDIA-ACTION_CROP_PARAM_DEFAULT_RATIO="Default aspect ratio"
 PLG_MEDIA-ACTION_CROP_PARAM_HEIGHT="Height"
 PLG_MEDIA-ACTION_CROP_PARAM_LANDSCAPE="Landscape"
