--- a/api/language/en-GB/joomla.ini
+++ b/api/language/en-GB/joomla.ini
@@ -448,6 +448,8 @@ JGLOBAL_INHERIT="Inherit"
 JGLOBAL_INTEGRATION_LABEL="Integration"
 JGLOBAL_INTRO_TEXT="Intro Text"
 JGLOBAL_ISFREESOFTWARE="%s is free software released under the <a href=\"https://www.gnu.org/licenses/gpl-2.0.html\" target=\"_blank\">GNU General Public License</a>."
+JGLOBAL_ITEM_FEATURE="Feature Item"
+JGLOBAL_ITEM_UNFEATURE="Unfeature Item"
 JGLOBAL_KEEP_TYPING="Keep typing ..."
 JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="Language pack does not match this Joomla! version. Some strings may be missing and will be displayed in English."
 JGLOBAL_LEAST_HITS="Least Hits"
@@ -634,7 +636,7 @@ JGLOBAL_TITLE_ASC="Title ascending"
 JGLOBAL_TITLE_DESC="Title descending"
 JGLOBAL_TITLE_REVERSE_ALPHABETICAL="Title Reverse Alphabetical"
 JGLOBAL_TOGGLE_DROPDOWN="Toggle Dropdown"
-JGLOBAL_TOGGLE_FEATURED="Toggle featured status."
+JGLOBAL_TOGGLE_FEATURED="Toggle featured status"
 JGLOBAL_TOP="Top"
 JGLOBAL_TPL_CPANEL_LINK_TEXT="Return to Dashboard"
 JGLOBAL_TYPE_OR_SELECT_CATEGORY="Type or Select a Category"
