--- a/administrator/language/en-GB/com_admin.ini
+++ b/administrator/language/en-GB/com_admin.ini
@@ -121,6 +121,7 @@ COM_ADMIN_LOG_DIRECTORY="(Log folder)"
 COM_ADMIN_MAX_INPUT_VARS="Maximum Input Variables"
 COM_ADMIN_MBSTRING_ENABLED="Multibyte String (mbstring) Enabled"
 COM_ADMIN_MEDIA_CACHE_DIRECTORY="(Media Cache folder)"
+COM_ADMIN_MEMORY_LIMIT="Memory Limit"
 COM_ADMIN_NA="n/a"
 COM_ADMIN_OPEN_BASEDIR="Open basedir"
 COM_ADMIN_OUTPUT_BUFFERING="Output Buffering"
@@ -129,6 +130,7 @@ COM_ADMIN_PHP_INFORMATION="PHP Information"
 COM_ADMIN_PHP_SETTINGS="PHP Settings"
 COM_ADMIN_PHP_VERSION="PHP Version"
 COM_ADMIN_PHPINFO_DISABLED="The built in phpinfo() function has been disabled by your host."
+COM_ADMIN_POST_MAX_SIZE="Post Max Size"
 COM_ADMIN_PROFILE_FIELD_BACKEND_LANGUAGE_LABEL="Backend Language"
 COM_ADMIN_PROFILE_FIELD_BACKEND_TEMPLATE_LABEL="Backend Template Style"
 COM_ADMIN_PROFILE_FIELD_EDITOR_LABEL="Editor"
@@ -158,6 +160,7 @@ COM_ADMIN_STATUS="Status"
 COM_ADMIN_SYSTEM_INFORMATION="System Information"
 COM_ADMIN_TEMP_DIRECTORY="(Temp folder)"
 COM_ADMIN_UNWRITABLE="Unwritable"
+COM_ADMIN_UPLOAD_MAX_FILESIZE="Upload Max Filesize"
 COM_ADMIN_USER_AGENT="User Agent"
 COM_ADMIN_VALUE="Value"
 COM_ADMIN_VIEW_PROFILE_TITLE="My Profile"
