--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -650,6 +650,7 @@ JGLOBAL_VOTES_ASC="Votes ascending"
 JGLOBAL_VOTES_DESC="Votes descending"
 JGLOBAL_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation of the Administrator Backend."
 JGLOBAL_WIDTH="Width"
+JGLOBAL_BOTTOM="Bottom"
 
 JGRID_HEADING_ACCESS="Access"
 JGRID_HEADING_ACCESS_ASC="Access ascending"
