--- a/administrator/language/en-GB/en-GB.com_joomlaupdate.ini
+++ b/administrator/language/en-GB/en-GB.com_joomlaupdate.ini
@@ -28,6 +28,7 @@ COM_JOOMLAUPDATE_OVERVIEW="Joomla Update"
 COM_JOOMLAUPDATE_TOOLBAR_CHECK="Check for Updates"
 COM_JOOMLAUPDATE_PREUPDATE_HEADING_CHECKED="Checked"
 COM_JOOMLAUPDATE_PREUPDATE_HEADING_REQUIREMENT="Requirement"
+COM_JOOMLAUPDATE_PREUPDATE_UNKNOWN_EXTENSION_MANIFESTCACHE_VERSION="Unknown Version"
 COM_JOOMLAUPDATE_UPDATE_LOG_CLEANUP="Cleaning up after installation."
 COM_JOOMLAUPDATE_UPDATE_LOG_COMPLETE="Update to version %s is complete."
 ; The following two strings are deprecated and will be removed with 4.0
