[4.0] [workflow] Translate title (#30231)
* [4.0] [workflow] Translate title

* Title => Name

--- a/administrator/language/en-GB/com_workflow.ini
+++ b/administrator/language/en-GB/com_workflow.ini
@@ -94,6 +94,7 @@ COM_WORKFLOW_STAGES_N_ITEMS_TRASHED_1="Stage trashed."
 COM_WORKFLOW_STAGES_N_ITEMS_UNPUBLISHED="%s stages disabled."
 COM_WORKFLOW_STAGES_N_ITEMS_UNPUBLISHED_1="Stage disabled."
 COM_WORKFLOW_STAGES_TABLE_CAPTION="Table of Workflow Stages"
+COM_WORKFLOW_TITLE_TRANSLATION="Name (%s)"
 COM_WORKFLOW_TO_STAGE="Target Stage"
 COM_WORKFLOW_TOO_MANY_STAGES="Only one stage can be set as the default."
 COM_WORKFLOW_TOO_MANY_WORKFLOWS="Only one workflow can be set as the default."
