--- a/language/en-GB/com_users.ini
+++ b/language/en-GB/com_users.ini
@@ -123,6 +123,7 @@ COM_USERS_RESET_CONFIRM_LABEL="An email has been sent to your email address. The
 COM_USERS_RESET_REQUEST_ERROR="Error requesting password reset."
 COM_USERS_RESET_REQUEST_FAILED="Reset password failed: %s"
 COM_USERS_RESET_REQUEST_LABEL="Please enter the email address for your account. A verification code will be sent to you. Once you have received the verification code, you will be able to choose a new password for your account."
+COM_USERS_RESET_TOKEN_EXPIRED="Verification code has expired, please request a new one."
 COM_USERS_SETTINGS_FIELDSET_LABEL="Basic Settings"
 COM_USERS_USER_BLOCKED="This user is blocked. If this is an error, please contact an administrator."
 COM_USERS_USER_FIELD_BACKEND_LANGUAGE_LABEL="Backend Language"
