--- a/installation/language/en-US/joomla.ini
+++ b/installation/language/en-US/joomla.ini
@@ -110,6 +110,7 @@ INSTL_REMOVE_INST_FOLDER="Are you sure you want to delete? Confirming will perma
 
 ; Languages view
 INSTL_LANGUAGES="Install Additional Languages"
+INSTL_LANGUAGES_COLUMN_HEADER_LANGUAGE_SELECT="Select Language"
 INSTL_LANGUAGES_COLUMN_HEADER_LANGUAGE="Language"
 INSTL_LANGUAGES_COLUMN_HEADER_LANGUAGE_TAG="Language Tag"
 INSTL_LANGUAGES_COLUMN_HEADER_VERSION="Version"
