[4.0] Adding a Change button for article modal when field is required

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -65,6 +65,7 @@ JCATEGORY="Category"
 JCATEGORY_ASC="Category ascending"
 JCATEGORY_DESC="Category descending"
 JCATEGORY_SPRINTF="Category: %s"
+JCHANGE="Change"
 JCLEAR="Clear"
 JCLIENT="Location"
 JCONFIG_PERMISSIONS_DESC="Permissions for this component unless they are changed for a specific item."
