--- a/administrator/language/en-GB/com_media.ini
+++ b/administrator/language/en-GB/com_media.ini
@@ -22,7 +22,7 @@ COM_MEDIA_DECREASE_GRID="Decrease grid size"
 COM_MEDIA_DELETE_ERROR="Error deleting the item."
 COM_MEDIA_DELETE_SUCCESS="Item deleted."
 COM_MEDIA_DROP_FILE="Drop file(s) to Upload"
-COM_MEDIA_EDIT="Media Edit"
+COM_MEDIA_EDIT="Media Edit - %s"
 COM_MEDIA_ERROR="An error occurred."
 COM_MEDIA_ERROR_NO_PROVIDERS="No filesystem providers have been found. Please enable at least one <a href=\"%s\">filesystem plugin</a>."
 COM_MEDIA_ERROR_NOT_AUTHENTICATED="You are not authenticated. Please login."
