--- a/administrator/language/en-GB/com_templates.ini
+++ b/administrator/language/en-GB/com_templates.ini
@@ -37,8 +37,8 @@ COM_TEMPLATES_CONFIG_SOURCE_LABEL="Valid Source Formats"
 COM_TEMPLATES_CONFIG_UPLOAD_LABEL="Max. Upload Size (MB)"
 COM_TEMPLATES_CONFIGURATION="Template: Options"
 COM_TEMPLATES_COPY_SUCCESS="New template called %s was installed."
-JTOOLBAR_CREATE_CHILD="Duplicate as child"
-JTOOLBAR_OVERRIDE_CHILD="Manage overrides"
+JTOOLBAR_CREATE_CHILD="Duplicate as Child"
+JTOOLBAR_OVERRIDE_CHILD="Manage Overrides"
 COM_TEMPLATES_CROP_AREA_ERROR="Crop area not selected."
 COM_TEMPLATES_DIRECTORY_NOT_WRITABLE="The template folder is not writable. Some features may not work."
 COM_TEMPLATES_ERR_XML="Template XML data not available"
