--- a/administrator/language/en-GB/tpl_atum.ini
+++ b/administrator/language/en-GB/tpl_atum.ini
@@ -17,6 +17,7 @@ TPL_ATUM_COLORS_SETTINGS_LABEL="Colour Settings"
 TPL_ATUM_COLORS_SETTINGS_LINK_COLOR_LABEL="Link Colour"
 TPL_ATUM_COLORS_SETTINGS_LINK_SIDEBAR_COLOR_LABEL="Sidebar Link Colour"
 TPL_ATUM_COLORS_SETTINGS_MONOCHROME_LABEL="Set Colour to Monochrome"
+TPL_ATUM_COLORS_SETTINGS_PRIMARY_COLOUR_LABEL="Primary Colour"
 TPL_ATUM_COLORS_SETTINGS_SECONDARY_COLOR_LABEL="Secondary Colour"
 TPL_ATUM_COLORS_SETTINGS_TEXT_DARK_LABEL="Dark Text"
 TPL_ATUM_COLORS_SETTINGS_TEXT_LIGHT_LABEL="Light Text"
