use of language files

--- a/administrator/language/en-GB/plg_workflow_images.sys.ini
+++ b/administrator/language/en-GB/plg_workflow_images.sys.ini
@@ -3,5 +3,5 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_WORKFLOW_FEATURING="Workflow - Featuring"
-PLG_WORKFLOW_FEATURING_XML_DESCRIPTION="Add featuring options to the workflow transitions for your items"
+PLG_WORKFLOW_IMAGES="Workflow - Images"
+PLG_WORKFLOW_IMAGES_XML_DESCRIPTION="Add image options to the workflow transitions for your items"
