--- a/administrator/language/en-GB/plg_workflow_images.ini
+++ b/administrator/language/en-GB/plg_workflow_images.ini
@@ -4,26 +4,17 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_WORKFLOW_IMAGES="Workflow - Images"
-PLG_WORKFLOW_IMAGES_INTRO_IMAGE_MISSING="Intro Image required to execute this transition"
-PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_MISSING="Full Article Image required to execute this transition"
-PLG_WORKFLOW_IMAGES_INTRO_IMAGE_REQUIRED="Intro Image required"
-
+PLG_WORKFLOW_IMAGES_INTRO_IMAGE_REQUIRED="Intro Image required to execute this transition"
+PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_REQUIRED="Full Article Image required to execute this transition"
+PLG_WORKFLOW_IMAGES_INTRO_IMAGE_INVALID_TYPE="Intro Image is not of type image"
+PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_INVALID_TYPE="Full Article Image is not of type image"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_SETTING_LABEL="Full Article Image required"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_SETTING_DESC="Define, if Full Article Image should be required, when executing this transistion"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_SETTING_LABEL="Intro Image required"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_SETTING_DESC="Define, if Intro Image should be required, when executing this transistion"
-
 PLG_WORKFLOW_IMAGES_HEIGHT_LABEL="Height"
 PLG_WORKFLOW_IMAGES_WIDTH_LABEL="Width"
-
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_HEIGHT_DESC="Height of cropped Intro Image"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_WIDTH_DESC="Width of cropped Intro Image"
-
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_HEIGHT_DESC="Height of cropped Full Article Image"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_WIDTH_DESC="Width of cropped Full Article Image"
-
-; PLG_WORKFLOW_FEATURING_CHANGE_STATE_NOT_ALLOWED="You're not allowed to change the featured state of this item. Please use a workflow transition."
-; PLG_WORKFLOW_FEATURING_FEATURED="Featured: %s"
-; PLG_WORKFLOW_FEATURING_TRANSITION_ACTIONS_FEATURING_DESC="Define the featured state an item should be set, when executing this transition"
-; PLG_WORKFLOW_FEATURING_TRANSITION_ACTIONS_FEATURING_LABEL="Featuring state"
-; PLG_WORKFLOW_FEATURING_XML_DESCRIPTION="Add featuring actions to the workflow transitions for your items"
