Add upload file size check to com_joomlaupdate (#29895)

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -549,6 +549,7 @@ JGLOBAL_SELECT_ALLOW_DENY_GROUP="Change %s permission for %s group."
 JGLOBAL_SELECT_AN_OPTION="Select an option"
 JGLOBAL_SELECT_NO_RESULTS_MATCH="No results match"
 JGLOBAL_SELECT_SOME_OPTIONS="Select some options"
+JGLOBAL_SELECTED_UPLOAD_FILE_SIZE="Selected file size: <strong>%s</strong>"
 JGLOBAL_SELECTION_ALL="Select All"
 JGLOBAL_SELECTION_INVERT="Toggle Selection"
 JGLOBAL_SELECTION_INVERT_ALL="Toggle All Selections"
