--- a/installation/language/en-GB/joomla.ini
+++ b/installation/language/en-GB/joomla.ini
@@ -88,6 +88,7 @@ INSTL_INSTALL_JOOMLA="Install Joomla"
 ; Site View
 INSTL_ADMIN_EMAIL_DESC="Enter the email address of the website Super User."
 INSTL_ADMIN_PASSWORD_DESC="Set the password for your Super User account."
+INSTL_ADMIN_PASSWORD_LENGTH="Enter at least 12 characters."
 INSTL_ADMIN_USER_DESC="Enter the real name of your Super User."
 INSTL_ADMIN_USERNAME_DESC="Set the username for your Super User account."
 INSTL_LOGIN_DATA="Login Data"
