improved image validation

--- a/administrator/language/en-GB/plg_workflow_images.ini
+++ b/administrator/language/en-GB/plg_workflow_images.ini
@@ -18,3 +18,5 @@ PLG_WORKFLOW_IMAGES_INTRO_IMAGE_HEIGHT_DESC="Height of cropped Intro Image"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_WIDTH_DESC="Width of cropped Intro Image"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_HEIGHT_DESC="Height of cropped Full Article Image"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_WIDTH_DESC="Width of cropped Full Article Image"
+PLG_WORKFLOW_IMAGES_INTRO_IMAGE_INVALID_EXTENSION="Invalid File Extension of Intro Image"
+PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_INVALID_EXTENSION="Invalid File Extension of Full Article Image"
