removed unnecessary descriptions

--- a/administrator/language/en-GB/plg_workflow_images.ini
+++ b/administrator/language/en-GB/plg_workflow_images.ini
@@ -4,19 +4,15 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_WORKFLOW_IMAGES="Workflow - Images"
-PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_HEIGHT_DESC="Height of cropped Full Article Image"
+PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_HEIGHT_LABEL="Full Article Image Height"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_INVALID_EXTENSION="Invalid File Extension of Full Article Image"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_INVALID_TYPE="Full Article Image is not of type image"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_REQUIRED="Full Article Image required to execute this transition"
-PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_SETTING_DESC="Define, if Full Article Image should be required, when executing this transistion"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_SETTING_LABEL="Full Article Image required"
-PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_WIDTH_DESC="Width of cropped Full Article Image"
-PLG_WORKFLOW_IMAGES_HEIGHT_LABEL="Height"
-PLG_WORKFLOW_IMAGES_INTRO_IMAGE_HEIGHT_DESC="Height of cropped Intro Image"
+PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_WIDTH_LABEL="Full Article Image Width"
+PLG_WORKFLOW_IMAGES_INTRO_IMAGE_HEIGHT_LABEL="Intro Image Height"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_INVALID_EXTENSION="Invalid File Extension of Intro Image"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_INVALID_TYPE="Intro Image is not of type image"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_REQUIRED="Intro Image required to execute this transition"
-PLG_WORKFLOW_IMAGES_INTRO_IMAGE_SETTING_DESC="Define, if Intro Image should be required, when executing this transistion"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_SETTING_LABEL="Intro Image required"
-PLG_WORKFLOW_IMAGES_INTRO_IMAGE_WIDTH_DESC="Width of cropped Intro Image"
-PLG_WORKFLOW_IMAGES_WIDTH_LABEL="Width"
+PLG_WORKFLOW_IMAGES_INTRO_IMAGE_WIDTH_LABEL="Intro Image Width"
