added fieldsets to form

--- a/administrator/language/en-GB/plg_workflow_images.ini
+++ b/administrator/language/en-GB/plg_workflow_images.ini
@@ -10,9 +10,12 @@ PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_INVALID_TYPE="Full Article Image is not o
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_REQUIRED="Full Article Image required to execute this transition"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_SETTING_LABEL="Full Article Image required"
 PLG_WORKFLOW_IMAGES_FULL_ARTICLE_IMAGE_WIDTH_LABEL="Full Article Image Width"
+PLG_WORKFLOW_IMAGES_IMAGE_SETTING_LABEL="Image Settings"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_HEIGHT_LABEL="Intro Image Height"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_INVALID_EXTENSION="Invalid File Extension of Intro Image"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_INVALID_TYPE="Intro Image is not of type image"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_REQUIRED="Intro Image required to execute this transition"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_SETTING_LABEL="Intro Image required"
 PLG_WORKFLOW_IMAGES_INTRO_IMAGE_WIDTH_LABEL="Intro Image Width"
+PLG_WORKFLOW_IMAGES_RESIZE_SETTING_LABEL="Resize Settings"
+
