Adjustable backend base font size
Closes gh-29411

--- a/administrator/language/en-GB/com_users.ini
+++ b/administrator/language/en-GB/com_users.ini
@@ -284,6 +284,7 @@ COM_USERS_UNACTIVATED="Unactivated"
 COM_USERS_USER_ACCOUNT_DETAILS="Account Details"
 COM_USERS_USER_BATCH_FAILED="An error was encountered while performing the batch operation: %s."
 COM_USERS_USER_BATCH_SUCCESS="Batch operation completed."
+COM_USERS_USER_FIELD_BACKEND_FONTSIZE_LABEL="Backend base font size (em)"
 COM_USERS_USER_FIELD_BACKEND_LANGUAGE_LABEL="Backend Language"
 COM_USERS_USER_FIELD_BACKEND_TEMPLATE_LABEL="Backend Template Style"
 COM_USERS_USER_FIELD_BLOCK="Blocked"
