--- a/language/en-GB/joomla.ini
+++ b/language/en-GB/joomla.ini
@@ -189,6 +189,7 @@ JFIELD_META_RIGHTS_DESC="Describe what rights others have to use this content."
 JFIELD_META_RIGHTS_LABEL="Content Rights"
 JFIELD_ORDERING_DESC="Ordering of the article within the category."
 JFIELD_ORDERING_LABEL="Ordering"
+JFIELD_PASSWORD_INDICATE_COMPLETE="Password accepted"
 JFIELD_PASSWORD_INDICATE_INCOMPLETE="Password doesn't meet site's requirements."
 JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N="Password does not have enough digits. At least %s digits are required."
 JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N_1="Password does not have enough digits. At least 1 digit is required."
