--- a/administrator/language/en-GB/com_languages.ini
+++ b/administrator/language/en-GB/com_languages.ini
@@ -10,7 +10,7 @@ COM_LANGUAGES_ERR_NO_LANGUAGE_SELECTED="No language selected."
 COM_LANGUAGES_ERROR_LANG_TAG="<br>The Language Tag should have 2 or 3 lowercase letters corresponding to the ISO language, a dash and 2 uppercase letters corresponding to the ISO country code. <br>This should be the exact prefix used for the language installed or to be installed. Example: en-GB, srp-ME."
 COM_LANGUAGES_ERROR_LANGUAGE_METAFILE_MISSING="Could not load %s language meta XML file from %s."
 COM_LANGUAGES_FIELD_IMAGE_LABEL="Image"
-COM_LANGUAGES_FIELD_LANG_CODE_DESC="This Language Code will be appended to the site URL. Note <em>the Language Code must be unique among all the languages</em>."
+COM_LANGUAGES_FIELD_LANG_CODE_DESC="This Language Code will be included in the site URL. Note <em>the Language Code must be unique among all the languages</em>."
 COM_LANGUAGES_FIELD_LANG_CODE_LABEL="URL Language Code"
 COM_LANGUAGES_FIELD_LANG_TAG_DESC="Enter the language tag – example: en-GB for English (en-GB). This should be the exact prefix used for the language installed or to be installed."
 COM_LANGUAGES_FIELD_LANG_TAG_LABEL="Language Tag"
