add JGLOBAL variable to ini

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -616,6 +616,7 @@ JGLOBAL_SHOW_TAGS_DESC="Show the tags for this link."
 JGLOBAL_SHOW_TAGS_LABEL="Tags"
 JGLOBAL_SHOW_TITLE_DESC="If set to Show, the article title is shown."
 JGLOBAL_SHOW_TITLE_LABEL="Title"
+JGLOBAL_INLINE_EDITOR_LABEL="Inline Editor"
 JGLOBAL_SHOW_UNAUTH_LINKS_DESC="If set to Yes, links to registered content will be shown even if you are not logged-in. You will need to log in to access the full item."
 JGLOBAL_SHOW_UNAUTH_LINKS_LABEL="Unauthorised Links"
 JGLOBAL_SHOW_VOTE_DESC="If set to show, a voting system will be enabled for Articles."
