added undo/redo in media manager

--- a/administrator/language/en-GB/com_media.ini
+++ b/administrator/language/en-GB/com_media.ini
@@ -67,6 +67,7 @@ COM_MEDIA_MEDIA_TYPE="Type"
 COM_MEDIA_NAME="Name"
 COM_MEDIA_OPEN_ITEM_ACTIONS="Open item actions"
 COM_MEDIA_PLEASE_SELECT_ITEM="Please select item."
+COM_MEDIA_REDO="Redo"
 COM_MEDIA_RENAME="Rename"
 COM_MEDIA_RENAME_ERROR="Error renaming item."
 COM_MEDIA_RENAME_SUCCESS="Item renamed."
@@ -83,3 +84,4 @@ COM_MEDIA_TOGGLE_LIST_VIEW="Toggle between grid and table views"
 COM_MEDIA_TOGGLE_SELECT_ITEM="Toggle select item"
 COM_MEDIA_TOOLBAR_LABEL="Media Manager"
 COM_MEDIA_UPLOAD_SUCCESS="Item uploaded."
+COM_MEDIA_UNDO="Undo"
