added history length option

--- a/language/en-GB/com_media.ini
+++ b/language/en-GB/com_media.ini
@@ -76,6 +76,8 @@ COM_MEDIA_FILESIZE="File size"
 COM_MEDIA_FOLDER="Folder"
 COM_MEDIA_FOLDER_NAME="Folder Name"
 COM_MEDIA_FOLDERS="Folders"
+COM_MEDIA_HISTORY_LENGTH_DESC="Set the number of states stored in the history to a value between 1 and 100."
+COM_MEDIA_HISTORY_LENGTH_LABEL="History States"
 COM_MEDIA_IMAGE_DESCRIPTION="Image Description"
 COM_MEDIA_IMAGE_URL="Image URL"
 COM_MEDIA_INCREASE_GRID="Increase grid size"
