--- a/administrator/language/en-GB/com_media.ini
+++ b/administrator/language/en-GB/com_media.ini
@@ -55,6 +55,8 @@ COM_MEDIA_FOLDER="Folder"
 COM_MEDIA_FOLDER_NAME="Folder Name"
 COM_MEDIA_FOLDERS="Media Folders"
 COM_MEDIA_FOLDERS_PATH_LABEL="<strong>Warning! Path Folder</strong><br>Changing the 'Path to files folder' from the default of 'images' may break your links.<br>The 'Path to images' folder has to be the same or a subfolder of 'Path to files'."
+COM_MEDIA_HISTORY_LENGTH_DESC="Set the number of states stored in the history to a value between 1 and 100."
+COM_MEDIA_HISTORY_LENGTH_LABEL="History States"
 COM_MEDIA_INCREASE_GRID="Increase grid size"
 COM_MEDIA_MEDIA_DATE_CREATED="Date Created"
 COM_MEDIA_MEDIA_DATE_MODIFIED="Date Modified"
