move role=alert to paragraph element

--- a/language/en-GB/com_finder.ini
+++ b/language/en-GB/com_finder.ini
@@ -32,9 +32,9 @@ COM_FINDER_QUERY_FILTER_BRANCH_VENUE="venue"
 COM_FINDER_QUERY_OPERATOR_AND="and"
 COM_FINDER_QUERY_OPERATOR_NOT="not"
 COM_FINDER_QUERY_OPERATOR_OR="or"
-COM_FINDER_QUERY_RESULTS="the following <a href=\"#search-result-list\" role=\"alert\">%s results were found</a>."
-COM_FINDER_QUERY_RESULTS_0="<span role=\"alert\">no results were found</span>. <a href=\"#q\">Search again</a>."
-COM_FINDER_QUERY_RESULTS_1="the following <span role=\"alert\">%s result was found</span>."
+COM_FINDER_QUERY_RESULTS="the following <a href=\"#search-result-list\">%s results were found</a>."
+COM_FINDER_QUERY_RESULTS_0="no results were found. <a href=\"#q\">Search again</a>."
+COM_FINDER_QUERY_RESULTS_1="the following %s result was found."
 COM_FINDER_QUERY_START_DATE="beginning date <span class=\"when\">%s</span> <span class=\"date\">%s</span>"
 COM_FINDER_QUERY_TAXONOMY_NODE="with <span class=\"node\">%s</span> as <span class=\"branch\">%s</span> "
 COM_FINDER_QUERY_TOKEN_EXCLUDED="<span class=\"term\">%s</span> should be excluded"
