[4.0] [Multilibgual Status module] Adding displaying a possible error if sef is not set

--- a/administrator/language/en-GB/com_languages.ini
+++ b/administrator/language/en-GB/com_languages.ini
@@ -66,6 +66,7 @@ COM_LANGUAGES_MULTILANGSTATUS_CONTACTS_ERROR_TIP="Warning! A user/author should 
 COM_LANGUAGES_MULTILANGSTATUS_CONTENT_LANGUAGE_HOME_UNPUBLISHED="Both the <strong>%s</strong> Content Language and its Home page are unpublished. <strong>The language will not display on the site.</strong>"
 COM_LANGUAGES_MULTILANGSTATUS_CONTENT_LANGUAGE_MISSING="The <strong>%s</strong> Content Language has been deleted although the corresponding Site Language is enabled and a Home page is assigned to this language. <strong>The language will not display on the site.</strong>"
 COM_LANGUAGES_MULTILANGSTATUS_CONTENT_LANGUAGE_PUBLISHED="Published Content Languages"
+COM_LANGUAGES_MULTILANGSTATUS_CONTENT_LANGUAGE_SEF_MISSING="The \"URL Language Code\" is missing for the <strong>%s</strong> Content Language. <strong>If not corrected, the multilingual feature may not function properly or the site may not be reachable!</strong>"
 COM_LANGUAGES_MULTILANGSTATUS_CONTENT_LANGUAGE_TRASHED="The <strong>%s</strong> Content Language is trashed. <strong>The language will not display on the site.</strong>"
 COM_LANGUAGES_MULTILANGSTATUS_DEFAULT_HOME_MODULE_PUBLISHED="The menu module displaying the Home menu item set to language &quot;All&quot; should not be published."
 COM_LANGUAGES_MULTILANGSTATUS_ERROR_CONTENT_LANGUAGE="A Default Home page is assigned to the <strong>%s</strong> Content Language although a Site Language for this Content Language is not installed or enabled AND/OR the Content Language is not published. <strong>The language will not display on the site.</strong>"
