add new JGLOBAL variable

--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -411,6 +411,7 @@ JGLOBAL_FIELD_SHOW_BASE_DESCRIPTION_LABEL="Top Level Category Description"
 JGLOBAL_FIELD_VERSION_NOTE_DESC="Enter an optional note for this version of the item."
 JGLOBAL_FIELD_VERSION_NOTE_LABEL="Version Note"
 JGLOBAL_FIELDS="Fields"
+JGLOBAL_FIELDS_INLINEEDITING="Inline Editing"
 JGLOBAL_FIELDS_TITLE="Custom Fields"
 JGLOBAL_FIELDSET_ADVANCED="Advanced"
 JGLOBAL_FIELDSET_ASSOCIATIONS="Associations"
